# chalice-htmx-alpine-jinja2-demo

./: README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config.json
chalicelib/: forms.py
chalicelib/templates/: base.html  index.html  list.html
chalicelib/templates/albums/: detail.html  list.html
chalicelib/templates/albums/partials/: detail.html  list.html
chalicelib/templates/albums/partials/photos/: list.html
chalicelib/templates/includes/: list.includes.html  pagination.html
chalicelib/templates/posts/: detail.html  list.html
chalicelib/templates/posts/partials/: detail.html  list.html
chalicelib/templates/posts/partials/comments/: list.html
chalicelib/templates/users/: detail.html  dropdown.html  list.html
chalicelib/templates/users/partials/: detail.html  list.html
chalicelib/utilities/: html.py  paginate.py
