[tool.poetry]
name = "chalice-htmx-alpine-jinja2-demo"
version = "0.1.0"
description = ""
authors = ["Brian Jinwright <bjinwright@qwigo.com>"]
readme = "README.md"
packages = [{include = "chalice_htmx_alpine_jinja2_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
chalice = "^1.29.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"
envs = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
